# metamessage

./: .gitignore  README.de.md  README.en.md  README.es.md  README.fr.md  README.id.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.th.md  README.vi.md  metamessage.go  metamessage_test.go
.trae/documents/: cross-language-jsonc-tests-phase3.md
cmd/debug_check/: main.go
cmd/diag_tag/: inherit_test.go  main.go
examples/c/: tag_attributes.c
examples/cpp/: basic_usage.cpp  high_level_api.cpp
examples/csharp/: Program.cs
examples/python/: basic_encode_decode.py  mm_decorator.py  value_to_node_api.py
internal/core/: binder.go  constants.go  debug_child_test.go  decode.go  decode_tag.go  encode.go  encode_array_test.go  encode_bigint_arr_test.go  encode_bool_test.go  encode_bytes_test.go  encode_float_test.go  encode_int_test.go  encode_string_test.go  encode_test.go  jsonc_test.go  mm.go  value_to_node.go  value_to_node_test.go
mm-c/: CMakeLists.txt  README.md
mm-cpp/: README.md
mm-cs/: README.md  mm-csharp.csproj
mm-kt/: README.md  pom.xml
mm-php/: .gitignore  README.md  composer.json
mm-py/: README.md  metamessage_test.py  pyproject.toml  test_quoting.py
mm-py/metamessage/: __init__.py
mm-py/metamessage/core/: __init__.py  decoder.py  encoder.py  mm.py  value_to_node.py
mm-py/metamessage/ir/: __init__.py  ast.py  mime.py  tag.py  validator.py  value_type.py
mm-py/metamessage/jsonc/: __init__.py  jsonc.py
mm-py/tests/: test_decoder.py  test_encoder.py  test_jsonc.py  test_mm.py  test_value_to_node.py  test_value_to_node_1.py  test_value_type_all_types.py
mm-rs/: Cargo.toml  README.md  fix_fields.py
mm-rs/mm-rs-derive/: Cargo.toml
mm-rs/mm-rs-derive/src/: lib.rs
mm-rs/src/: lib.rs
mm-rs/src/core/: constants.rs  decoder.rs  encoder.rs  mod.rs  prefix.rs  simple_value.rs  utils.rs  validator.rs  value_to_node.rs
mm-rs/src/ir/: ast.rs  binder.rs  mime.rs  mod.rs  tag.rs  to_string.rs  value_type.rs
mm-rs/src/jsonc/: parser.rs  scanner.rs
mm-swift/: README.md
mm-ts/: README.md  package.json
tests/: _analyze_child_tags.py  _analyze_decode_compare.py  _analyze_encode_diff.py  _compare_now.py  _debug_analyze_scores.py  _debug_arr_infer.py  _debug_compare.py  _debug_compare_ast.py  _debug_decode.py  _debug_diff.py  _debug_encoder.py  _debug_py.py  _debug_py_ast.py  _debug_roundtrip.py  _debug_tag.py  _debug_tag2.py  _debug_tag_ts.cjs  _debug_tag_ts.mjs  _decode_diff.py  _decode_tags.py  analyze_child_tags.py  analyze_compare.py  analyze_diff.py  check_tag.js  check_tag2.js  compare_all_with_go.sh  compare_hex.py  compare_hex2.py  compare_with_go.sh  decode_wire.py  diag_kt.py  diag_kt.sh  encode_decode_test.sh  encode_decode_test_c.sh  encode_decode_test_cpp.sh  encode_decode_test_cs.sh  encode_decode_test_kt.sh  encode_decode_test_php.sh  encode_decode_test_py.sh  encode_decode_test_rs.sh  (+8 more)
(+210 files in other folders)
